전체 리펙토링
async config
user, auth, github, openai, document  리펙토링
일부 의존성 버전에 맞게 수정(java11 -> 17)