@@ -1,7 +1,7 @@
 package com.shk95.giteditor.common.security.filter;
 
 import com.shk95.giteditor.common.security.jwt.JwtTokenProvider;
-import com.shk95.giteditor.core.user.domain.token.BlacklistTokenRepository;
+import com.shk95.giteditor.core.auth.application.port.out.BlacklistTokenRepositoryPort;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -14,8 +14,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -23,13 +21,10 @@ import java.util.List;
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-	//TODO: 필터 제외목록 점검. 필요한지?
-	private static final List<String> EXCLUDE_URL = Collections.unmodifiableList(Arrays.asList(
-		"/static/**",
-		"/auth/signup"
-	));
+	private static final List<String> EXCLUDE_URL = List.of("/static/**", "/auth/signup");
+
 	private final JwtTokenProvider jwtTokenProvider;
-	private final BlacklistTokenRepository blacklistTokenRepository;
+	private final BlacklistTokenRepositoryPort blacklistTokenRepositoryPort;
 
 	@Override
 	protected boolean shouldNotFilter(HttpServletRequest request) throws ServletException {
@@ -45,7 +40,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 		// 2. validateToken 으로 토큰 유효성 검사
 		if (!token.isEmpty() && jwtTokenProvider.isVerified(token)) {
 			// Redis 에 해당 accessToken logout 여부 확인
-			if (!blacklistTokenRepository.findById(token).isPresent()) {
+			if (blacklistTokenRepositoryPort.findByAccessToken(token).isEmpty()) {
 				// 토큰이 유효할 경우 토큰에서 Authentication 객체를 가지고 와서 SecurityContext 에 저장
 				Authentication authentication = jwtTokenProvider.getAuthentication(token);
 				SecurityContextHolder.getContext().setAuthentication(authentication);
